Mon Sep 18 02:08:52 BST 2006  Richard Boulton <richard@lemurconsulting.com>

        * setup.py: Read the source files from libstemmer_c/mkinc_utf8.mak,
          instead of MANIFEST.  Should remove unused code from generated
          library which implemented stemming in non-UTF-8 character sets.
        * Bump version number to 1.0.2

Mon Jun 19 07:51:38 BST 2006  Richard Boulton <richard@tartarus.org>

        * setup.py: fix setup.py to work with python 2.3: don't use "set",
          which doesn't exist before python 2.4.
        * Stemmer.pyx: Add module-level "version()" function, to determine
          version of Stemmer.  General tidying up, too.
        * Bump version number to 1.0.1

Sun Jun 11 22:22:00 BST 2006  Richard Boulton <richard@tartarus.org>

        * Release initial package of PyStemmer, version 1.0
